--- a/app/src/main/res/layout/activity_medical_diagnostics.xml
+++ b/app/src/main/res/layout/activity_medical_diagnostics.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/medicalDiagnosticsHeaderImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/todo"
+                    android:contentDescription="TODO"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
@@ -95,7 +95,7 @@
                         android:layout_height="35dp"
                         android:layout_marginLeft="15dp"
                         android:baselineAlignBottom="false"
-                        android:contentDescription="@string/todo"
+                        android:contentDescription="TODO"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.789"
                         app:layout_constraintStart_toStartOf="parent"
