--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -27,7 +27,7 @@
             android:layout_height="120dp"
             android:layout_marginLeft="140dp"
             android:layout_marginTop="135dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="25dp"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
@@ -72,7 +72,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="35dp"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gopher_logo" />
@@ -253,7 +253,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 android:src="@drawable/urgent_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/urgentMedicalAttentionTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -284,7 +284,7 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 android:src="@drawable/hospital_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/requiresHospitalisationTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -315,7 +315,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 android:src="@drawable/forbidden_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/notApplicableTextView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -351,7 +351,7 @@
                 android:layout_marginEnd="14dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 android:src="@drawable/time_patient_status"
                 app:layout_constraintBottom_toBottomOf="@+id/requiresHourlyAttentionTextView"
                 app:layout_constraintEnd_toStartOf="@+id/loginBtn"
