--- a/app/src/main/res/layout/activity_main_page_with_menu.xml
+++ b/app/src/main/res/layout/activity_main_page_with_menu.xml
@@ -43,7 +43,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="72dp"
                         android:layout_marginTop="41dp"
-                        android:contentDescription="@string/todo"
+                        android:contentDescription="TODO"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/gopher_logo" />
@@ -64,7 +64,7 @@
                             android:id="@+id/menu_home_icon"
                             android:layout_width="22.5dp"
                             android:layout_height="20dp"
-                            android:contentDescription="@string/todo"
+                            android:contentDescription="TODO"
                             android:src="@drawable/menu_home" />
 
                     <TextView
@@ -95,7 +95,7 @@
                             android:id="@+id/menu_admin_icon"
                             android:layout_width="22.5dp"
                             android:layout_height="20dp"
-                            android:contentDescription="@string/todo"
+                            android:contentDescription="TODO"
                             android:src="@drawable/menu_pen_edit" />
 
                     <TextView
@@ -126,7 +126,7 @@
                             android:id="@+id/menu_settings_icon"
                             android:layout_width="22.5dp"
                             android:layout_height="20dp"
-                            android:contentDescription="@string/todo"
+                            android:contentDescription="TODO"
                             android:src="@drawable/menu_settings" />
 
                     <TextView
@@ -157,7 +157,7 @@
                             android:id="@+id/menu_sigh_out_icon"
                             android:layout_width="22.5dp"
                             android:layout_height="20dp"
-                            android:contentDescription="@string/todo"
+                            android:contentDescription="TODO"
                             android:src="@drawable/menu_signout" />
 
                     <TextView
