--- a/app/src/main/res/layout/activity_patient_page_update.xml
+++ b/app/src/main/res/layout/activity_patient_page_update.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="60dp"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/menu_button" />
@@ -57,7 +57,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="21dp"
                 android:layout_marginBottom="2dp"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/medicalDiagnosticsTitleTextView"
                 app:srcCompat="@drawable/profile_avatar_women" />
