--- a/app/src/main/res/layout/last_fifteen_day.xml
+++ b/app/src/main/res/layout/last_fifteen_day.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintStart_toStartOf="@+id/imageView35"
             app:layout_constraintTop_toBottomOf="@+id/imageView35"
             app:srcCompat="@drawable/rectangle1592" />
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="16dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView49"
             app:srcCompat="@drawable/rectangle1592" />
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintStart_toStartOf="@+id/imageView38"
             app:layout_constraintTop_toBottomOf="@+id/imageView38"
             app:srcCompat="@drawable/rectangle1592" />
@@ -132,7 +132,7 @@
             android:layout_width="424dp"
             android:layout_height="0dp"
             android:layout_marginBottom="2dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView39"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.23"
@@ -171,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="190dp"
                 android:layout_marginTop="65dp"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/gopher_logo" />
 
@@ -181,7 +181,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="70dp"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 app:srcCompat="@drawable/menu_button" />
 
             <ImageView
@@ -190,7 +190,7 @@
                 android:layout_height="51dp"
                 android:layout_marginLeft="340dp"
                 android:layout_marginTop="65dp"
-                android:contentDescription="@string/todo"
+                android:contentDescription="TODO"
                 app:srcCompat="@drawable/profile_avatar_women" />
 
             <TextView
@@ -218,7 +218,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="127dp"
             android:layout_marginBottom="296dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView48"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.538"
@@ -233,7 +233,7 @@
             android:layout_marginTop="160dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="251dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView29_a"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView37"
@@ -245,7 +245,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/name22"
             app:layout_constraintTop_toBottomOf="@+id/name26"
@@ -257,7 +257,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="56dp"
             android:layout_marginBottom="35dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView52"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/name23"
@@ -269,7 +269,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView40"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView40"
@@ -293,7 +293,7 @@
             android:id="@+id/imageView9_b"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="@+id/imageView9_a"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -307,7 +307,7 @@
             android:layout_marginStart="53dp"
             android:layout_marginTop="114dp"
             android:layout_marginEnd="13dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/name"
             app:layout_constraintEnd_toStartOf="@+id/imageView10_a"
             app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +319,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="39dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/name23"
             app:layout_constraintEnd_toStartOf="@+id/imageView52"
             app:layout_constraintStart_toStartOf="parent"
@@ -358,7 +358,7 @@
             android:layout_marginStart="53dp"
             android:layout_marginEnd="170dp"
             android:layout_marginBottom="197dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/name23"
             app:layout_constraintStart_toStartOf="parent"
@@ -371,7 +371,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="34dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView53"
             app:layout_constraintEnd_toStartOf="@+id/imageView47"
             app:layout_constraintStart_toEndOf="@+id/name24"
@@ -384,7 +384,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="55dp"
             android:layout_marginBottom="9dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="@+id/imageView49"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/name25"
@@ -396,7 +396,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="56dp"
             android:layout_marginBottom="9dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="@+id/imageView50"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/name26"
@@ -407,7 +407,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="166dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView40"
             app:layout_constraintEnd_toStartOf="@+id/name24"
             app:layout_constraintStart_toEndOf="@+id/imageView38"
@@ -421,7 +421,7 @@
             android:layout_marginStart="53dp"
             android:layout_marginEnd="136dp"
             android:layout_marginBottom="31dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/imageView54"
             app:layout_constraintEnd_toStartOf="@+id/name25"
             app:layout_constraintStart_toStartOf="parent"
@@ -435,7 +435,7 @@
             android:layout_marginStart="53dp"
             android:layout_marginEnd="148dp"
             android:layout_marginBottom="25dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/name26"
             app:layout_constraintStart_toStartOf="parent"
@@ -449,7 +449,7 @@
         android:layout_width="424dp"
         android:layout_height="82dp"
         android:layout_marginBottom="217dp"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
@@ -486,7 +486,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="190dp"
             android:layout_marginTop="65dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
 
@@ -496,7 +496,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="70dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/menu_button" />
 
         <ImageView
@@ -505,7 +505,7 @@
             android:layout_height="51dp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="65dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -543,7 +543,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="18dp"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerCard_a"
         app:srcCompat="@drawable/chevrondown" />
@@ -553,7 +553,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="93dp"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/rectangle3" />
