--- a/app/src/main/res/layout/patient_status_layout.xml
+++ b/app/src/main/res/layout/patient_status_layout.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:layout_weight="1"
-        android:contentDescription="@string/todo"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
