dark theme chanegs

--- a/app/src/main/res/layout/activity_patieng_list_item.xml
+++ b/app/src/main/res/layout/activity_patieng_list_item.xml
@@ -38,8 +38,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="9dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/patient_name"
-                android:textColor="@color/black"
+                android:text="Patient name"
+                android:textColor = "?android:textColorPrimary"
                 android:textSize="15sp" />
 
             <ImageView
